<resources>
    <string name="app_name">Hide and Beep</string>
    <string name="back">Back</string>
    <string name="back_to_game">Back to game</string>
    <string name="play_again">Play again</string>
    <string name="unlimited">Unlimited</string>


    <!--Img Content Description-->
    <string name="img_description_grass">Green grass field with a fence.</string>
    <string name="img_description_two_sheep">Two cartoon sheep.</string>
    <string name="img_description_tick_button">Button with a tick on.</string>
    <string name="img_description_sheep_hide">A sheep holding his eyes shut.</string>
    <string name="img_description_logo">Hide and Beep logo.</string>
    <string name="img_description_clouds">Clouds.</string>
    <string name="img_description_sheep_looking">Sheep looking.</string>
    <string name="img_description_sheep_loser">Sad sheep standing in the rain.</string>
    <string name="img_description_alarm_bell">Red alarm bell.</string>
    <string name="img_description_location_circle">A circle using colors to indicate how close the next hint is.</string>
    <string name="img_description_sheep_sign">Sheep looking and holding a sign with the amount of time left for the game.</string>
    <string name="img_description_owl">Owl sitting on a branch.</string>
    <string name="img_description_logout">Button with a door - Logout.</string>
    <string name="img_description_help">Button with a questionmark - Help.</string>
    <string name="img_description_liferanking">Button with a list on - Liferanking.</string>
    <string name="img_description_sheep_winner">Two sheeps looking and holding balloons.</string>
    <string name="img_description_lock">A big lock with lots of different sheeps in it.</string>
    <string name="img_description_sheep_with_key">Sheep standing with a key.</string>
    <string name="img_description_speech_bubble">A speech bubble with a treasure.</string>


    <!--Homescreen-->
    <string name="start_hunt">Play Scavenger Hunt</string>

    <!--Enter Auth Key-->
    <string name="enter_auth_key_hint">Enter Key</string>
    <string name="enter_auth_key_headline">Enter hunt key: </string>
    <string name="enter_auth_key_nextbtn">Load hunt </string>

    <!--Show hint-->
    <string name="hint_title">Hint</string>
    <!--<string name="hint_text">You will find the next clue in a place that always runs but never walks, often murmurs, never talks, has a bed but never sleeps, has a mouth but never eats.</string>-->

    <!--Main game screen-->
    <string name="main_game_screen_text">How many hints are still missing?</string>
    <string name="main_game_hint_button">Hint</string>
    <string name="main_game_enter_code_button">Enter Treasure Code</string>

    <!--&lt;!&ndash;Live ranking&ndash;&gt;-->
    <!--<string name="live_ranking_title">Live Ranking</string>-->
    <!--<string name="live_ranking_username">Username:</string>-->
    <!--<string name="live_ranking_hints_found">Hints found:</string>-->
    <!--<string name="live_ranking_time_remaining">Time remaining:</string>-->

    <!--Enter treasure code-->
    <string name="enter_code_title">Enter Treasure Code</string>
    <string name="submit_code">Submit code</string>
    <string name="enter_code_text">Enter the code found in the treasure. If the code is correct, you win the game! You have 3 tries in total!</string>
    <string name="enter_code_hint">e.g. A very secret code</string>

    <!--Losing screen-->
    <string name="losing_screen_title">Better luck next time!</string>

    <!--Instructions screen-->
    <string name="instructions_screen_desc">Hit start to receive your first hint. Follow the hint to the location it is describing. If you are close to the location, your phone will start beeping and vibrate. Once you reach the correct location, you will receive the next hint. The final hint will lead you to the treasure. The treasure will contain a secret code. Enter this code into the app to win!
    Have fun!</string>
    <string name="instructions_headline">Instructions</string>
    <string name="instructions_btn">Start Scavenger hunt</string>


    <!--Help screen-->
    <string name="help_headline">Help</string>
    <string name="backbtn_helpscreen">Back</string>
    <string name="help_desc_screen">You can create and organise scavenger hunts on the Hide and Beep <a href="https://hide-and-beep.projects.multimediatechnology.at">website</a>. After creating a hunt on the website, and adding hints to it, you will find an authentication key for each hunt on the website. On the app, you can start a specific scavenger hunt by entering in its authentication key.
    \n\n
        © 2012 Gitanki (Freesound) All Rights Reserved
    </string>
    <string name="help_desc_copyright">© 2012 Gitanki (Freesound) All Rights Reserved</string>

    <!--Winning screen-->
    <string name="winning_headline">Congratulations, you found the treasure!</string>

    <!--&lt;!&ndash;Login screen&ndash;&gt;-->
    <!--<string name="login_headline">Login</string>-->
    <!--<string name="login_username">Username</string>-->
    <!--<string name="login_password">Password</string>-->

    <!--<string name="edit_username">Input field for username.</string>-->
    <!--<string name="edit_password">Input field for password.</string>-->
    <!--<string name="img_description_keylock_with_sheep">A black keylock with all the different sheep in it.</string>-->
    <!--<string name="img_description_logout_button">Logout Button.</string>-->

</resources>
