<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterAuthKeyActivity"
    android:background="@drawable/background_gradient">


    <include layout="@layout/nav_bar_home_btn"/>

    <include
        android:id="@+id/include"
        layout="@layout/help_button" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="385dp"
        android:layout_height="344dp"
        android:layout_marginTop="333dp"
        android:contentDescription="@string/img_description_grass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_grass" />

    <ImageView
        android:layout_width="134dp"
        android:layout_height="463dp"
        android:contentDescription="@string/img_description_sheep_looking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_seekstanding" />

    <ImageView
        android:id="@+id/clouds"
        android:layout_width="157dp"
        android:layout_height="164dp"
        android:contentDescription="@string/img_description_clouds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/ic_clouds2" />


    <TextView
        android:id="@+id/instuctionsTextView"
        android:layout_width="191dp"
        android:layout_height="278dp"
        android:layout_marginTop="124dp"
        android:text="@string/instructions_screen_desc"
        android:textSize="15sp" />

    <Button
        android:id="@+id/nextBtn"
        style="@style/buttonStyle"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:text="@string/enter_auth_key_nextbtn"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="156dp"
        android:layout_height="33dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="80dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_auth_key_headline"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/clouds"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clouds" />

    <EditText
        android:id="@+id/editTextKey"
        style="@android:style/Widget.ListView.White"
        android:layout_width="202dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/enter_auth_key_hint"
        android:background="@color/backgroundBeige"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.547" />


</android.support.constraint.ConstraintLayout>