<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainGameActivity"
    android:background="@drawable/background_gradient">

    <include
        android:id="@+id/include2"
        layout="@layout/nav_bar_home_btn" />

    <include
        android:id="@+id/include3"
        layout="@layout/help_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView4"
        style="@style/headingStyle"
        android:layout_width="211dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="385dp"
        android:layout_height="350dp"
        android:layout_marginTop="333dp"
        android:contentDescription="@string/img_description_grass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_grass" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:paddingEnd="20sp"
        android:paddingStart="20sp"
        android:text="@string/main_game_screen_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="77dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_alarm2"
        android:contentDescription="@string/img_description_alarm_bell"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/ic_alarm1"
        android:contentDescription="@string/img_description_alarm_bell"/>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="176dp"
        android:layout_height="192dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_yellowalarm"
        android:contentDescription="@string/img_description_location_circle"/>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="347dp"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_sheepwithsign"
        android:contentDescription="@string/img_description_sheep_sign"/>

    <TextView
        android:id="@+id/gameTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/mainGameHintBtn"
        style="@style/buttonStyle"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_game_hint_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/mainGameEnterCodeBtn"
        style="@style/buttonStyle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/main_game_enter_code_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/mainGameHintBtn" />

    <TextView
        android:id="@+id/numberOfHintsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="8"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />


    <!--HINT OVERLAY-->
    <LinearLayout
        android:id="@+id/hintOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/backgroundBeige"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include3"
        app:layout_constraintVertical_bias="0.471">

        <TextView
            android:id="@+id/textView3"
            style="@style/headingStyle"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:text="@string/hint_title" />

        <!--hint text from API (inserted via Java)-->
        <TextView
            android:id="@+id/hintText"
            android:layout_width="318dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="36dp"

            android:elevation="10dp"
            android:gravity="center_horizontal"
            android:lineHeight="25sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton
            android:id="@+id/hintTickButton"
            android:layout_width="99dp"
            android:layout_height="96dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_description_tick_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/hintText"
            app:layout_constraintVertical_bias="0.504"
            app:srcCompat="@drawable/ic_tick_button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>